--- a/my-app/package.json
+++ b/my-app/package.json
@@ -29,6 +29,8 @@
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^9.1.2",
     "electron-squirrel-startup": "^1.0.0",
+    "file-loader": "^6.2.0",
+    "minecraft-launcher-core": "^3.16.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.58.0"
