--- a/my-app/package.json
+++ b/my-app/package.json
@@ -38,6 +38,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "electron-is-dev": "^2.0.0",
+    "express": "^4.18.2",
     "minecraft-launcher-core": "^3.16.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
