--- a/my-app/package.json
+++ b/my-app/package.json
@@ -2,7 +2,7 @@
   "name": "sakura-launcher",
   "productName": "SakuraLauncher",
   "author": "SakuraProject",
-  "version": "1.0.5",
+  "version": "1.6.51",
   "description": "Minecraft Launcher",
   "main": "./public/electron.js",
   "repository": "https://github.com/20GK/SakuraLauncherV4",
@@ -14,11 +14,8 @@
   "scripts": {
     "react": "react-scripts start",
     "electron": "electron .",
+    "build-Dev": "react-scripts build && electron-builder --win",
     "build-Publish": "react-scripts build && electron-builder --win -p always"
-  },
-  "browser": {
-    "path": false,
-    "stream": false
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
@@ -52,6 +49,7 @@
     "electron-updater": "^5.3.0",
     "express": "^4.18.2",
     "minecraft-launcher-core": "^3.16.18",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
