--- a/my-app/package.json
+++ b/my-app/package.json
@@ -2,7 +2,7 @@
   "name": "sakura-launcher",
   "productName": "SakuraLauncher",
   "author": "SakuraProject",
-  "version": "2.0.44",
+  "version": "2.0.45",
   "description": "Minecraft Launcher",
   "main": "./public/electron.js",
   "repository": "https://github.com/20GK/SakuraLauncherV4",
@@ -10,10 +10,11 @@
     "provider": "github",
     "releaseType": "release"
   },
+  "type": "module",
   "homepage": "./",
   "scripts": {
     "react": "react-scripts start",
-    "electron": "electron .",
+    "electron": "electron . --disable-gpu --trace-warnings",
     "build-Dev": "react-scripts build && electron-builder --win",
     "build-Publish": "react-scripts build && electron-builder --win -p always"
   },
@@ -46,6 +47,7 @@
     "electron-is-dev": "^2.0.0",
     "electron-updater": "^5.3.0",
     "minecraft-launcher-core": "^3.16.18",
+    "msmc": "^3.1.3",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
