--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,7 +10,6 @@
     "provider": "github",
     "releaseType": "release"
   },
-  "type": "module",
   "homepage": "./",
   "scripts": {
     "react": "react-scripts start",
@@ -48,6 +47,7 @@
     "electron-updater": "^5.3.0",
     "minecraft-launcher-core": "^3.16.18",
     "msmc": "^3.1.3",
+    "node-fetch": "^3.3.0",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
