--- a/my-app/package.json
+++ b/my-app/package.json
@@ -46,6 +46,7 @@
     "electron-is-dev": "^2.0.0",
     "electron-updater": "^5.3.0",
     "minecraft-launcher-core": "^3.16.18",
+    "net": "^1.0.2",
     "node-fetch": "^3.3.0",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
